[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terabox-gateway"
version = "2.0.1"
description = "Fast Python gateway for extracting metadata, thumbnails, and direct download links from Terabox share URLs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Flask",
]
dependencies = [
    "flask>=3.0.0",
    "aiohttp>=3.9.0",
]

[project.license]
text = "MIT"

[[project.authors]]
name = "@Saahiyo"
email = "linkg518@gmail.com"

[project.urls]
"Homepage" = "https://github.com/saahiyo/terabox-gateway"
"Bug Tracker" = "https://github.com/saahiyo/terabox-gateway/issues"

[project.scripts]
terabox-gateway = "terabox_gateway.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"terabox_gateway" = ["swagger/swagger.json"]
