[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terabox-gateway"
version = "2.0.2"
description = "Fast Python gateway for extracting metadata, thumbnails, direct download links, and HLS streaming support from TeraBox share URLs."
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "terabox",
    "gateway",
    "terabox-bypass",
    "terabox-gateway",
    "terabox-api",
    "terabox-hls",
    "metadata",
    "thumbnails",
    "direct download links"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Flask",
]

dependencies = [
    "flask>=3.0.0",
    "aiohttp>=3.9.0",
]

[project.license]
text = "MIT"

[[project.authors]]
name = "Shakir Ansari"
email = "shakir.ansarii075@gmail.com"

[project.urls]
Homepage = "https://github.com/saahiyo/terabox-gateway"
Repository = "https://github.com/saahiyo/terabox-gateway"
Issues = "https://github.com/saahiyo/terabox-gateway/issues"
"Live Demo" = "https://tera-core.vercel.app/"

[project.scripts]
terabox-gateway = "terabox_gateway.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"terabox_gateway" = ["swagger/swagger.json"]
